--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./managerstyle.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/managerstyle.css">
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
     <header>
         <div class="janela-header">
-            <div class="logo"><a href="./manager.html"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>    
+            <div class="logo"><a href="./manager"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>    
             <div class="user-container">
                 <h2>My user:</h2>
                 <h3>gvmolinadmin</h3>
@@ -26,12 +26,12 @@
     
     <section class="manager janela">
         <div class="manager-line">
-            <div class="manager-item"><a href="./register.html"><button><i class="fas fa-user-plus"></i></button></a><h2>Create new user</h2></div>
-            <div class="manager-item"><a href="./searchbyuser.html"><button><i class="fas fa-user-times"></i></button></a><h2>Delete user</h2></div>
-            <div class="manager-item"><a href="./searchbyuser.html"><button><i class="fas fa-users"></i></button></a><h2>User logs</h2></div>
-            <div class="manager-item"><a href="./searchbyuser.html"><button><i class="fas fa-search"></i></button></a><h2>Search By User</h2></div>
-            <div class="manager-item"><a href="./searchbyuser.html"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 1</h2></div>
-            <div class="manager-item"><a href="./searchbyuser.html"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 2</h2></div>
+            <div class="manager-item"><a href="./register"><button><i class="fas fa-user-plus"></i></button></a><h2>Create new user</h2></div>
+            <div class="manager-item"><a href="./manager"><button><i class="fas fa-user-times"></i></button></a><h2>Delete user</h2></div>
+            <div class="manager-item"><a href="./manager"><button><i class="fas fa-users"></i></button></a><h2>User logs</h2></div>
+            <div class="manager-item"><a href="./searchbyuser"><button><i class="fas fa-search"></i></button></a><h2>Search By User</h2></div>
+            <div class="manager-item"><a href="./manager"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 1</h2></div>
+            <div class="manager-item"><a href="./manager"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 2</h2></div>
         </div>
         <div class="manager-line">
             <div class="manager-item"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-search"></i></button></a><h2>Search By Rank 3</h2></div>
@@ -46,6 +46,6 @@
             
   
 
-    <script src="./manager.js" async></script>
+    <script src="js/manager.js" async></script>
 </body>
 </html>
