--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./managerstyle.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/managerstyle.css">
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
     <header>
         <div class="janela-header">
-            <div class="logo"><a href="./manager.html"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
+            <div class="logo"><a href="./manager"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
             <div class="user-container">
                 <h2>My user:</h2>
                 <h3>gvmolinadmin</h3>
@@ -25,7 +25,7 @@
     
     <section class="register-program janela">
         <form class="register">
-           <h2>Register a new user:</h2>
+           <h2>Register a new user</h2>
            <div>
                <label name="newusername">Username:</label>
                <input type="text" name="newusername" id="newusername">
@@ -44,5 +44,5 @@
     </section>
   
 
-    <script src="./register.js" async></script>
+    <script src="js/register.js" async></script>
 </body>
