--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./managerstyle.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/managerstyle.css">
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
     <header>
         <div class="janela-header">
-            <div class="logo"><a href="./manager.html"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
+            <div class="logo"><a href="./manager"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>
             <div class="user-container">
                 <h2>My user:</h2>
                 <h3>gvmolinadmin</h3>
@@ -29,8 +29,6 @@
                 <div><label for="user">by user:</label><input type="text" id="user" name=""></div>
                 <div><label>and by date:</label><input type="date" id="date" name=""></div>
                 <button class="search-button">SEARCH</button>
-
-
             </form>
        
 
@@ -154,6 +152,6 @@
             
   
 
-    <script src="./manager.js" async></script>
+    <script src="js/manager.js" async></script>
 </body>
 </html>
