--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -152,6 +152,6 @@
             
   
 
-    <script src="js/manager.js" async></script>
+    <script src="js/searchbyuser.js" async></script>
 </body>
 </html>
