--- a/server/views/searchbyuser.ejs
+++ b/server/views/searchbyuser.ejs
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/managerstyle.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./managerstyle.css">
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <title>HUNTERFY MANAGER</title>
 </head>
@@ -52,12 +52,12 @@
                     </ul>
                 </li>
                 <li class="values">
-                    <ul class="columns">
+                    <ul class="columns" id="firstcolumn">
                         <li>${element.user_id}</li>
                         <li>${element.dateandtime}</li>
                         <li>${element.parcelid}</li>
-                        <li><img src="${element.gisimg}"></li>
-                        <li><img src="${element.floodzoneimg}"></li>
+                        <li><img src="./img/pesquisar.png"></li>
+                        <li><img src="./img/pesquisar2.jpg"></li>
                         <li></li>
                     </ul>
                 </li>
@@ -152,6 +152,6 @@
             
   
 
-    <script src="js/searchbyuser.js" async></script>
+    <script src="./searchbyuser.js" async></script>
 </body>
 </html>
