--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -23,10 +23,10 @@
         <div class="janela-login">
             <div class="logo" style="margin: 0; padding: 0;"><img src="img/Hunterfy.png" alt=""></div>
             <div>
-                <form class="login-form">
+                <form class="login-form" action="/login" method="POST">
                     <div><label for="username">LOGIN:</label><input name="username" type="text"></div>
                     <div><label for="password">PASSWORD:</label><input name="password" type="password"></div>
-                    <a href="./app" style="text-decoration: none;"><div class="login-button"><h2>LOGIN</h2></div></a>
+                    <div class="login-button"><h2>LOGIN</h2></div>
 
                 </form>
             </div>
