--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -26,7 +26,7 @@
                 <form class="login-form" action="/login" method="POST">
                     <div><label for="username">LOGIN:</label><input name="username" type="text"></div>
                     <div><label for="password">PASSWORD:</label><input name="password" type="password"></div>
-                    <div class="login-button"><h2>LOGIN</h2></div>
+                    <button type="submit"><h2>LOGIN</h2><button>
 
                 </form>
             </div>
