--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -23,7 +23,7 @@
         <div class="janela-login">
             <div class="logo" style="margin: 0; padding: 0;"><img src="img/Hunterfy.png" alt=""></div>
             <div>
-                <form class="login-form" action="/login" method="POST">
+                <form class="login-form" action="/" method="POST">
                     <div><label for="username">LOGIN:</label><input name="username" type="text"></div>
                     <div><label for="password">PASSWORD:</label><input name="password" type="password"></div>
                     <button type="submit"><h2>LOGIN</h2></button>
