--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -24,8 +24,8 @@
             <div class="logo" style="margin: 0; padding: 0;"><img src="img/Hunterfy.png" alt=""></div>
             <div>
                 <form class="login-form" action="/" method="POST">
-                    <div><label for="username">LOGIN:</label><input name="username" type="text"></div>
-                    <div><label for="password">PASSWORD:</label><input name="password" type="password"></div>
+                    <div><label for="username">LOGIN:</label><input name="username" type="text" id="user"></div>
+                    <div><label for="password">PASSWORD:</label><input name="password" type="password" id="pass"></div>
                     <button type="submit"><h2>LOGIN</h2></button>
                 </form>
             </div>
@@ -36,7 +36,7 @@
     
     <!--<script src="js/new-card.js" async></script>
     <script src="./js/edit-card.js" async></script>-->
-    <script></script>
+    <script src="js/loginpage.js"></script>
     
 </body>
 </html>
