--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -79,6 +79,7 @@
             if(userPassJson == undefined){
                 console.log("falta algo")
             }else{
+                console.log(userPassJson)
                 postUserPass(userPassJson)
             }
         })
