--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -23,7 +23,14 @@
         </div>
             <div>
                 <div class="menu-info janela-info">
-                    <h2>Contagem:</h2><h2 class="contador">0</h2>
+                    <div>
+                        <h2>Contagem:</h2>
+                        <h2 class="contador">0</h2>
+                    </div>
+                    <div>
+                        <h2>Username</h2>
+                        <input type="text" id="usernameinput">
+                    </div>
                 </div>
                 <button class="menu-button info-button"><i class="fas fa-info"></i></button>
                 <button class="menu-button add-card"><i class="fas fa-plus"></i></button>
