--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -18,7 +18,7 @@
             <div class="logo"><a href="./manager"><img src="./img/Hunterfy.png" alt="Hunterfy logo"></a><h1>MANAGER v1.0</h1></div>    
             <div class="user-container">
                 <h2>My user:</h2>
-                <h3>gvmolinadmin</h3>
+                <input type="text">
             </div>
         </div>
         
