--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -27,8 +27,8 @@
         <div class="manager-line">
             <div class="manager-item"><a href="./register"><button><i class="fas fa-user-plus"></i></button></a><h2>Create new user</h2></div>
             <div class="manager-item"><a href="./manager"><button><i class="fas fa-user-times"></i></button></a><h2>Delete user</h2></div>
-            <div class="manager-item"><a href="./manager"><button><i class="fas fa-id-card"></i></button></a><h2>List all users</h2></div>
-            <div class="manager-item"><a href="./manager"><button><i class="fas fa-users"></i></button></a><h2>User logs</h2></div>
+            <div class="manager-item"><a href="./allusers"><button><i class="fas fa-id-card"></i></button></a><h2>List all users</h2></div>
+            <div class="manager-item"><a href="./userlogs"><button><i class="fas fa-users"></i></button></a><h2>User logs</h2></div>
             <div class="manager-item"><a href="./searchbyuser"><button><i class="fas fa-search"></i></button></a><h2>Search By User</h2></div>
             <div class="manager-item"><a href="./manager"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 1</h2></div>
             
@@ -37,7 +37,7 @@
             <div class="manager-item"><a href="./manager"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 2</h2></div>
             <div class="manager-item"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-search"></i></button></a><h2>Search By Rank 3</h2></div>
             <div class="manager-item"><a href="./searchbyuser.html"><button class="add-user"><i class="fas fa-clipboard-list"></i></button></a><h2>My logs</h2></div> 
-            <div class="manager-item inv"></div>
+            <div class="manager-item"><a href="./post"><button class="add-user"><i class="fas fa-share"></i></button></a><h2>Send data</h2></div>
             <div class="manager-item inv"></div>
             <div class="manager-item inv"></div>
         </div>
@@ -46,6 +46,6 @@
             
   
 
-    <script src="js/manager.js" async></script>
+    
 </body>
 </html>
