--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -30,7 +30,7 @@
             <div class="manager-item"><a href="./allusers"><button><i class="fas fa-id-card"></i></button></a><h2>List all users</h2></div>
             <div class="manager-item"><a href="./userlogs"><button><i class="fas fa-users"></i></button></a><h2>User logs</h2></div>
             <div class="manager-item"><a href="./searchbyuser"><button><i class="fas fa-search"></i></button></a><h2>Search By User</h2></div>
-            <div class="manager-item"><a href="./manager"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 1</h2></div>
+            <div class="manager-item"><a href="./searchbyrankone"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank 1</h2></div>
             
         </div>
         <div class="manager-line">
