--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -15,7 +15,7 @@
     <title>HUNTERFY!</title>
 </head>
 <body style="background-image: url(img/background.jpg)">
-    <header style="background-image: url(./img/black-bumpy-old-book-cover-texture-3.jpg);">
+    <header style="background-image: url(img/book-cover-resize.jpg)">
         
         <div>
             <div class="logo"><h1><img src="./img/Hunterfy.png" alt=""></h1></div>
