--- a/server/views/manager-login-page.ejs
+++ b/server/views/manager-login-page.ejs
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="./reset.css">
-    <link type="text/css" rel="stylesheet" href="./managerstyle.css">
+    <link type="text/css" rel="stylesheet" href="css/reset.css">
+    <link type="text/css" rel="stylesheet" href="css/managerstyle.css">
     <title>HUNTERFY MANAGER</title>
 </head>
 <body style="background-color: #1b1818;">
     
     <section class="login">
         <div class="janela-login">
-            <div class="login-logo" style="margin: 0; padding: 0;"><img src="Hunterfy.png" alt=""><h2>MANAGER v1.0</h2></div>
+            <div class="login-logo" style="margin: 0; padding: 0;"><img src="/img/Hunterfy.png" alt=""><h2>MANAGER v1.0</h2></div>
             <div>
                 <form class="login-form" action="/login" method="POST">
                     <div><label for="username">LOGIN:</label><input id="user" name="username" type="text"></div>
@@ -32,7 +32,7 @@
 
 
     
-    <script src="/js/loginpage.js" async></script>
+    <script src="/js/loginpagemanager.js" async></script>
     
 </body>
 </html>
