--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -29,7 +29,7 @@
                     </div>
                     <div>
                         <h2>Username</h2>
-                        <input type="text" id="usernameinput">
+                        <h2 id="username"><%= user %></h2>
                     </div>
                 </div>
                 <button class="menu-button info-button"><i class="fas fa-info"></i></button>
