--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -32,8 +32,25 @@
                         <h2 id="username"><%= user %></h2>
                     </div>
                 </div>
-                <button class="menu-button info-button"><i class="fas fa-info"></i></button>
-                <button class="menu-button add-card"><i class="fas fa-plus"></i></button>
+                <div class="menu-info janela-logs" style="display: none;">
+                    <div>
+                        <h2>Logs:</h2>
+                        <h2 class="contador">0</h2>
+                    </div>
+                    
+                </div>
+
+                
+                <div class="buttons-window">
+                    <div>
+                        <button class="menu-button"><i class="fas fa-clock"></i></button>
+                        <button class="menu-button" id="logoff" ><i class="fas fa-power-off"></i></i></button>
+                    </div>
+                    <div>
+                        <button class="menu-button info-button"><i class="fas fa-info"></i></button>
+                        <button class="menu-button add-card"><i class="fas fa-plus"></i></button>
+                    </div>
+                </div>
             </div>
             
         
