--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -24,6 +24,14 @@
             <div>
                 <div class="menu-info janela-info">
                     <div>
+                        <h2>State:</h2>
+                        <input type="text" id="state">
+                    </div>
+                    <div>
+                        <h2>County:</h2>
+                        <input type="text" id="county">
+                    </div>
+                    <div>
                         <h2>Contagem:</h2>
                         <h2 class="contador">0</h2>
                     </div>
